src/component/pane_layout/snapshots/envision__component__pane_layout__title_style__tests__snapshot_pane_title_style_focus_invariant.snap
---
source: src/component/pane_layout/title_style.rs
expression: plain
---
┌ F ───────────────┐┌ U ───────────────┐
│                  ││                  │
│                  ││                  │
│                  ││                  │
└──────────────────┘└──────────────────┘
