src/component/pane_layout/snapshots/envision__component__pane_layout__title_style__tests__snapshot_pane_with_branded_title_style.snap
---
source: src/component/pane_layout/title_style.rs
expression: plain
---
┌ Brand ───────────┐┌ Plain ───────────┐
│                  ││                  │
│                  ││                  │
│                  ││                  │
└──────────────────┘└──────────────────┘
